<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.zencase.order.ZenActivity" >

    <item
        android:id="@+id/menu_zen_update"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_update"/>
    <item
        android:id="@+id/menu_zen_new"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_zen_new"/>
    <item
        android:id="@+id/menu_zen_wait"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_zen_wait"/>
    <item
        android:id="@+id/menu_zen_done"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_zen_done"/>
    <item
        android:id="@+id/menu_zen_fail"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_zen_fail"/>

</menu>