<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

<GridLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="1"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/order_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_column="0"
        android:layout_row="0"
        android:text="@string/customer_name"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/order_phone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_column="0"
        android:layout_row="1"
        android:text="@string/phone_number"
        android:textSize="36sp" 
        android:textColor="@color/maroon"/>

    <TextView
        android:id="@+id/order_address"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_column="0"
        android:layout_row="2"
        android:text="@string/address"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/order_product"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_column="0"
        android:layout_row="3"
        android:text="@string/product_name"
        android:textSize="28sp" 
        android:textColor="@color/red"/>
    
    <TextView
        android:id="@+id/order_price"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_column="0"
        android:layout_row="4"
        android:text="@string/order_price"
        android:textSize="28sp" 
        android:textColor="@color/red"/>
    
    <TextView
        android:id="@+id/order_extra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_column="0"
        android:layout_row="5"
        android:text="@string/order_extra"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/order_status"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_column="0"
        android:layout_row="6"
        android:text="@string/order_status"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/order_time"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_column="0"
        android:layout_row="7"
        android:text="@string/order_time"
        android:textSize="20sp" />
    
    <TextView
        android:id="@+id/order_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_column="0"
        android:layout_row="8"
        android:text="@string/order_code"
        android:textSize="20sp" />

</GridLayout>

</ScrollView>