<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

<GridLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="5"
    android:orientation="vertical"
    android:rowCount="10" >

    <TextView
        android:id="@+id/product_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_row="0"
        android:gravity="center"
        android:text="@string/order_tittle"
        android:textSize="25sp" />
    
    <TextView
        android:id="@+id/product_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:layout_marginTop="30dp"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:layout_row="1"
        android:text="@string/order_code"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/product_link"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:layout_marginTop="30dp"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:layout_row="2"
        android:text="@string/order_status"
        android:linksClickable="true"
        android:textSize="20sp" 
        android:textColor="@color/blue"
        android:textStyle="italic"/>

    <TextView
        android:id="@+id/product_price"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:layout_marginTop="30dp"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:layout_row="3"
        android:text="@string/customer_name"
        android:textSize="36sp" 
        android:textColor="@color/red"/>

</GridLayout>

</ScrollView>